# local-csv-indexing

./: .env  .gitignore  .gitpod.yml  README.md  commands.json  package-lock.json  package.json  squid.yaml
data/: analysis-notebook.ipynb  analysis.py  pyproject.toml
src/: db.ts  processor.ts  tables.ts
src/abi/: matic.abi.ts  matic.ts
